--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,8 @@
+/* Colours */
+
+/*  #ff0000 red
+
+
 /*-------------------------------------------- Whole Site Formatting --------------------------------------------*/
 
 body {
@@ -8,370 +13,185 @@ body {
        Georgia,
        serif;
     font-weight: 300;
-}
-  
-
-
-
-    h1 {
-        font-family: TimesNewRoman,
-            "Times New Roman",
-            Times,
-            Baskerville,
-            Georgia,
-            serif;
-        font-size: 50px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 700;
-        line-height: 26.4px;
-        text-transform: capitalize;
-        
-    }
-
-    h2 {
-        font-family: TimesNewRoman,
-            "Times New Roman",
-            Times,
-            Baskerville,
-            Georgia,
-            serif;
-        font-size: 30px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 700;
-        line-height: 26.4px;
-        text-transform: capitalize;
-        padding-top: 3%;
-
-    }
-
-    h3 {
-            font-family: TimesNewRoman,
-            "Times New Roman",
-            Times,
-            Baskerville,
-            Georgia,
-            serif;
-             font-size: 30px;
-             text-transform: capitalize;
-             padding-top: 1%;
-        
-    }
-        h4 {
-    font-family: TimesNewRoman,
-    "Times New Roman",
-    Times,
-    Baskerville,
-    Georgia,
-    serif;
-              font-size: 24px;
-           
-        
-           
-
-        }
-
-             h5 {
-                 font-family: TimesNewRoman,
-                     "Times New Roman",
-                     Times,
-                     Baskerville,
-                     Georgia,
-                     serif;
-                 font-size: 24px;
-             }
-        
-
-.navbar-dark { color:black}
-
-    .p {
-        font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
-        font-size: 25px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 600;
-        line-height: 20px;
-        text-transform: capitalize;
-   }
-
-    blockquote {
-        font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
-        font-size: 21px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 400;
-        line-height: 30px;
-    }
-
-    pre {
-        font-family: TimesNewRoman, "Times New Roman", Times, Baskerville, Georgia, serif;
-        font-size: 13px;
-        font-style: normal;
-        font-variant: normal;
-        font-weight: 400;
-        line-height: 18.5714px;
-    }
-}
-
-img {
-    width: 40%;
-    height: 40%;
-    border-radius: 8px;
-}
-
-.banner-image {
-    background: url("../images/banner.JPG");
-    background-color: #cccccc;
-    height: 500px;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-    position: relative;
-}
-
-.banner-text {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-}
-
-
-
-#carousel {
-    margin-top: 5;
-    margin-bottom: 5%;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-#carousel-inner {
-    width: 100px;
-    height: 100px;
-
-}
-
-
-}
-
-
-#tag-line {
-          
-    text-align: center;
-}
-
-#contact-form {
-    max-width: 50%;
-}
-
-#message-sent {
-    margin-top: 5%;
-    text-align: center;
-
-}
-
-#about-lines img{
-    margin: auto;
-    max-width: 300px;
-    max-height: 300px;
-    margin-top: 30px;
-    margin-bottom 30px;
-    
-}
-
-#description {
-    text-align: justify;
-}
-
-#description p{
-        font-size: 20px;
-        text-transform: none;
-
-}
-
-#lodge img {
-    width: 100%;
-    height: 100%;
-    position: center;
-}
-
-#model-text {
-    text-align: justify;
-}
-
-#testimonials-image img{
-    border-radius: 0%;
-    height: 50%;
-    width: 50%;
-}
-
-#description {
-    padding-top: 2%;
-    padding-bottom: 2%;
-}
-
-
-.card {
-    margin-top: 20px;
-    margin-left: 20px;
-    margin-right: 20px;
-    text-align: justify;
- 
-}
-
-.card-img-top {
-    display: block;
-    padding-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 100%;
-    max-width: 100px;
-    max-height: 100px;
-    text-align: center;
-}
-
-
-
-
-.lodge-image {
-    display: block;
-    padding-top: 10px;
-    margin-left: auto;
-    margin-right: auto;
-    border-radius: 100%;
-    width: 300px;
-    height: 300px;
-    text-align: center;
-
-
-
+      color: #ff0000;
 }
 
 button {
     align-items: center;
-
-
-}
-div.polaroid {
-    width: 50%;
-    background-color: white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
-    margin-bottom: 25px;
-    margin-left: 80px;
-    margin-right: 80px;
 }
 
-div.container {
+h1 {
     text-align: center;
-    padding: 10px 20px;
+    padding-top: 3%;
+    padding-bottom: 3%;
+    color: #ff0000;
+
+}
+
+h2 {
+    text-align: center;
+    text-transform: uppercase;
+    padding-top: 2%;
+    padding-bottom: 2%;
+    color: #ff0000;
+
+}
+
+h3 {
+    color: #ff0000;
+    padding-left: 3%;
+    padding-bottom: 2%;
+    padding-top: 2%;
+}
+
+p {
+    color: black;
+    padding-left: 3%;
+    padding-right: 3%;
 }
 
 
-.lodge-text {
-    text-align: justify;
+
+/* Thick red border */
+hr.red {
+    border: 1px solid #ff0000;
+    width: 80%;
+    
 }
 
-#gallary img:hover {
-    margin-left: 30px;
-    -webkit-transform: scale(3, 3);
+/* Card styling */
+
+.card-body{
+    margin-left: 2%;
+     margin-top: 2%;
+      margin-right: 2%;
+   
+}
+
+.card-text {
+    padding-top: 3%;
+}
+
+.card-photo {
+    padding-top: 20%;
+}
+
+.card-img-top {
+
+    height: 100px;
+    width: 100px;
+
+}
+
+.card-deck {
+    width: 95%;
+    padding-left: 20%;
+    padding-right: 5%;
+    padding-top: 5%;
+}
+
+
+
+
+
+
+
+.navbar-dark {
+    color: #ff0000;
+}
+
+.box {
+    padding-top: 2%;
+    padding-bottom: 4%;
+    width: 30%;
+    height: 200px;
+  
+}
+
+
+.centerImage {
+    text-align: center;
+    display: block;
+}
+
+button {
+    align-items: center;
+    background-color: #ff0000;
+
+
+}
+
+.footer {
+    padding-top: 5%;
+}
+
+hr {
+    color: #ff0000;
+}
+
+.center {
+    display: block;
     margin-left: auto;
     margin-right: auto;
+    width: 50%;
 }
 
-
-
-
-
-
-</style></head><body>
-
-.vertical-center {
-    margin: 0;
-    position: absolute;
-    top: 50%;
-    -ms-transform: translateY(-50%);
-    transform: translateY(-50%);
+.card img{
+           border-radius: 50%;
+           padding-top: 1%;
+           padding-bottom: 1%;
 }
 
-* {
-    box-sizing: border-box;
+#title {
+    padding-top: 2%;
 }
 
-body {
-    font-family: Arial, Helvetica, sans-serif;
-}
-/* Gallary */
-div.gallery {
-    margin: 5px;
-    border: 1px solid #ccc;
-    float: left;
-    width: 180px;
-}
+/* Go to top button */
 
-div.gallery:hover {
-    border: 1px solid #777;
-}
-
-div.gallery img {
-    width: 100%;
-    height: auto;
-}
-
-div.desc {
+#myBtn {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #ff0000;
+    ;
+    color: black;
+    cursor: pointer;
     padding: 15px;
-    text-align: center;
+    border-radius: 4px;
 }
 
-/* Float four columns side by side */
-.column {
-    float: left;
-    width: 25%;
-    padding: 0 10px;
+#myBtn:hover {
+    background-color: #1d04fd;
+    ;
 }
 
-/* Remove extra left and right margins, due to padding */
-.row {
-    margin: 0 -5px;
+
+/* Links */
+/* unvisited link */
+a:link {
+    color: #ff0000;
 }
 
-/* Clear floats after the columns */
-.row:after {
-    content: "";
-    display: table;
-    clear: both;
+/* visited link */
+a:visited {
+    color: #ff0000;
 }
 
-/* Style the counter cards */
-.card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;}
+/* mouse over link */
+a:hover {
+    color: blue;
+}
 
+/* selected link */
+a:active {
+    color: blue;
+}
 
-  #myBtn {
-      display: none;
-      position: fixed;
-      bottom: 20px;
-      right: 30px;
-      z-index: 99;
-      font-size: 18px;
-      border: none;
-      outline: none;
-      background-color: #6a6a6e;
-      ;
-      color: white;
-      cursor: pointer;
-      padding: 15px;
-      border-radius: 4px;
-  }
-
-  #myBtn:hover {
-      background-color: #1d04fd;
-      ;
-  }
 
 /* Responsive columns */
 @media screen and (max-width: 600px) {
@@ -397,6 +217,7 @@ div.desc {
          font-weight: 30;
          line-height: 16.4px;
          text-transform: capitalize;
+         text-align: center;
      }
      h2 {
          font-family: TimesNewRoman,
