--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,27 +21,43 @@ button {
 }
 
 h1 {
+    text-transform: capitalize;
     text-align: center;
-    padding-top: 3%;
+    padding-top: 1%;
     padding-bottom: 3%;
     color: #ff0000;
 
 }
 
 h2 {
+    text-transform: capitalize;
     text-align: center;
-    text-transform: uppercase;
-    padding-top: 2%;
-    padding-bottom: 2%;
+    padding-left: 3%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    color: black;
+}
+
+h3 {
+    text-transform: capitalize;
+    text-align: center;
+    padding-top: 1%;
+    padding-bottom: 3%;
     color: #ff0000;
 
 }
 
-h3 {
-    color: #ff0000;
+h6 {
+    text-transform: capitalize;
     padding-left: 3%;
-    padding-bottom: 2%;
-    padding-top: 2%;
+    padding-top: 1%;
+    color: black;
+}
+
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 p {
@@ -49,6 +65,13 @@ p {
     padding-left: 3%;
     padding-right: 3%;
 }
+
+ul {
+    color: black;
+    padding-left: 10%;
+   
+}
+
 
 
 
