--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,8 +71,24 @@ ul {
     padding-left: 10%;
    
 }
+img {
+    height: 100%;
+    width:80%;
+}
 
+.footer img {
 
+      height: 70%;
+      width:20%;
+      }
+}
+
+.carosel-item-large img {
+
+    height: 70%;
+    width: 20%;
+}
+}
 
 
 /* Thick red border */
