index, members, regions and news pages complted.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -71,24 +71,8 @@ ul {
     padding-left: 10%;
    
 }
-img {
-    height: 100%;
-    width:80%;
-}
 
-.footer img {
 
-      height: 70%;
-      width:20%;
-      }
-}
-
-.carosel-item-large img {
-
-    height: 70%;
-    width: 20%;
-}
-}
 
 
 /* Thick red border */
@@ -99,6 +83,12 @@ hr.red {
 }
 
 /* Card styling */
+
+.card {
+       margin-left: 2%;
+       margin-top: 2%;
+       margin-right: 2%;
+}
 
 .card-body{
     margin-left: 2%;
@@ -156,10 +146,18 @@ hr.red {
 button {
     align-items: center;
     background-color: #ff0000;
+    color: white;
 
 
 }
 
+.carousel-item {
+
+    height: 400px;
+
+    max-height: 400px;
+
+}
 .footer {
     padding-top: 5%;
 }
@@ -175,11 +173,20 @@ hr {
     width: 50%;
 }
 
-.card img{
-           border-radius: 50%;
-           padding-top: 1%;
-           padding-bottom: 1%;
+.card-img-top {
+    border-radius: 7%;
+    padding-top: 6%;
+    padding-bottom: 3%;
+    width: 50%;
+    height: 50%;
 }
+
+.card-img-index-top {
+    padding-top: 5%;
+    width: 80%;
+    height: 50%;
+}
+
 
 #title {
     padding-top: 2%;
