--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,6 +14,23 @@ body {
        serif;
     font-weight: 300;
       color: #ff0000;
+      width: 100%;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
 }
 
 button {
@@ -73,13 +90,28 @@ ul {
 }
 
 
+#left {
 
+    float: left;
+    padding-top: 2%;
+    max-height: 80px;
+    max-width: 80px;
+}
+
+.title-ing {
+    padding-bottom: 5%;
+}
 
 /* Thick red border */
 hr.red {
     border: 1px solid #ff0000;
     width: 80%;
     
+}
+
+hr.title {
+    border: 1px solid #ff0000;
+    width: 40%;
 }
 
 /* Card styling */
