--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -36,32 +36,70 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  max-width: 100px;
-  max-height: 100px;
+  width: 100px;
+  height: 100px;
+  border-radius: 25px;
+}
+
+.about-image {
+  padding: 5%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 300px;
+  height: 300px;
+  border-radius: 25px;
 }
 
 .members-image {
-  padding-top: 5%;
+
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
-  max-width: 400px;
-  max-height: 400px;
+  width: 400px;
+  height: 400px;
+  border-radius: 25px;
+}
+
+
+
+.committe-image {
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
+  width: 200px;
+  height: 200px;
+  padding-bottom: 2%;
+  border-radius: 25px;
 }
 
 .news-image {
-  padding-top: 5%;
+
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  border-radius: 25px;
+  width: 200px;
+  height: 200px;
+  padding-bottom: 2%;
+  border-radius: 25px;
+}
+
+
+.regions-image {
+
   display: block;
   margin-left: auto;
   margin-right: auto;
   width: 50%;
   width: 200px;
-  height: 200px;
+  height: 150px;
   padding-bottom: 2%;
+  border-radius: 25px;
 }
-
-
 
 .centerImage {
     text-align: center;
@@ -110,6 +148,35 @@ h6 {
 #title {
     padding-top: 2%;
 }
+
+
+/* Cards */
+
+
+.card-text {
+  text-align: center;
+}
+
+..card {
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2); /* this adds the "card" effect */
+  padding: 16px;
+  text-align: center;
+  background-color: #f1f1f1;
+}
+
+.card-body{
+    margin-left: 2%;
+     margin-top: 2%;
+      margin-right: 2%;
+        margin-bottom: 2%;
+padding-top: 5%;
+   
+}
+
+.card-text {
+    padding-top: 3%;
+}
+
 
 /* Go to top button */
 
